# inventory

./: README.md  package-lock.json  package.json  setup.sh
backend/: .env.example  .gitignore  Makefile  docker-compose.yml  main.py  pyproject.toml
backend/app/: app.py
backend/app/db/: __init__.py
backend/app/extensions/: all_models.py
backend/app/files/: models.py  routes.py  schemas.py
backend/app/inventory/: enums.py
backend/app/inventory/models/: asset.py  category.py  location.py
backend/app/inventory/routes/: __init__.py  asset.py  assets.py  locations.py
backend/app/inventory/schemas/: asset.py  location.py
backend/app/scripts/: fixtures.py  save_openapi.py
backend/app/users/models/: user.py
backend/app/utils/: db_helpers.py  strings.py
backend/migrations/: env.py
backend/migrations/versions/: 11c780da6347_.py  13407316072e_.py  2b5d8f50097e_.py  a1b2c3d4e5f6_add_asset_columns_and_relationship_tables.py  ad3ea86156a8_.py  af7ae6368a55_.py  e284a1681385_.py
frontend/: Makefile  eslint.config.js  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  FooterSimple.module.css
frontend/src/api/: client.ts  schema.d.ts
