[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.5",
    "fastapi[standard]>=0.139.0",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.0.0",
    "ruff>=0.15.22",
    "sqlalchemy[asyncio]>=2.0.51",
]
